<resources>
    <string name="app_name">Keep notes</string>
    <string name="create">Create</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="add_note">Add note</string>
    <string name="search_your_notes">Search your notes</string>
    <string name="button_back">button_back</string>
    <string name="registration">Registration</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="app_icon">app_icon</string>
    <string name="login">Login</string>
    <string name="username_can_not_be_empty">Username can not be empty</string>
    <string name="username_can_not_contain_space">Username can not contain space</string>
    <string name="username_can_not_be_less_than_3_characters_long">Username can not be less than 3 characters long</string>
    <string name="email_can_not_be_empty">Email can not be empty</string>
    <string name="email_can_not_contain_spaces">Email can not contain spaces</string>
    <string name="the_email_format_is_not_correct">The email format is not correct</string>
    <string name="password_can_not_be_empty">Password can not be empty</string>
    <string name="password_can_not_contain_spaces">Password can not contain spaces</string>
    <string name="password_can_not_be_less_than_8_characters_long">Password can not be less than 8 characters long</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="send">Send</string>
    <string name="log_out_button">Log out button</string>
    <string name="delete_button">Delete button</string>
    <string name="changes_were_discarded">Changes were discarded</string>
    <string name="empty_note_was_discarded">Empty note was discarded</string>
    <string name="note_did_not_change">Note did not change</string>
    <string name="error_happened_note_didn_t_create">Error happened note didn\'t create</string>
    <string name="error_happened_note_didn_t_update">Error happened note didn\'t update</string>
    <string name="error_happened_note_didn_t_delete">Error happened note didn\'t delete</string>
    <string name="authentication_failed_password_should_be_at_least_6_characters">Authentication failed, Password should be at least 6 characters</string>
    <string name="authentication_failed_invalid_email_entered">Authentication failed, Invalid email entered</string>
    <string name="user_with_this_email_already_exist">User with this email already exist</string>
    <string name="unknown_error">Unknown error</string>
    <string name="email_has_been_sent">Email has been sent</string>
    <string name="authentication_failed_check_email_and_password">Authentication failed, Check email and password</string>
    <string name="authentication_failed_check_email">Authentication failed, Check email</string>
    <string name="authentication_succeed_but_session_didn_t_save_user">Authentication succeed, but session didn\'t save user</string>
    <string name="keep_notes">Keep Notes</string>
</resources>